# routes/api.php
@@ -11,50 +11,50 @@ use App\Http\Controllers\Api\SKLController;
 Route::post('getToken', 'Api\\AuthController@getToken');
 
 Route::group(['as' => 'api.', 'namespace' => 'Api', 'middleware' => ['auth:sanctum']], function () {
-    
-    //getCompletedSKL
-    Route::get('getSKL/{npwp}', 'SKLController@getSKL'); 
 
-    //dashboard
-    Route::get('getApiDashboardDatabyYear/{periodetahun}', 'DashboardDataController@monitoringDataByYear');
+	//getCompletedSKL
+	Route::get('getSKL/{no_ijin}', 'SKLController@getSKL');
 
-    // Route::post('getAPIAccessToken', 'HelperController@getAPIAccessToken');
-    // Provinsi
-    Route::get('getAPIProvinsiAll', 'HelperController@getprovinsi');
-    //Kabupaten
-    Route::get('getAPIKabupatenAll', 'HelperController@getkabupaten');
-    Route::get('getAPIKabupatenProp', 'HelperController@getKabupatenProp');
-    //Kecamatan
-    Route::get('getAPIKecamatanAll', 'HelperController@getkecamatan');
-    Route::get('getAPIKecamatanKab', 'HelperController@getKecamatanKab');
-    Route::get('getAPIKecamatan', 'HelperController@getKecamatanKode');
+	//dashboard
+	Route::get('getApiDashboardDatabyYear/{periodetahun}', 'DashboardDataController@monitoringDataByYear');
 
-    //Desa
-    Route::get('getAPIDesaAll', 'HelperController@getdesa');
-    Route::get('getAPIDesaKec', 'HelperController@getDesaKec');
-    Route::get('getAPIDesa', 'HelperController@getDesaKode');
+	// Route::post('getAPIAccessToken', 'HelperController@getAPIAccessToken');
+	// Provinsi
+	Route::get('getAPIProvinsiAll', 'HelperController@getprovinsi');
+	//Kabupaten
+	Route::get('getAPIKabupatenAll', 'HelperController@getkabupaten');
+	Route::get('getAPIKabupatenProp', 'HelperController@getKabupatenProp');
+	//Kecamatan
+	Route::get('getAPIKecamatanAll', 'HelperController@getkecamatan');
+	Route::get('getAPIKecamatanKab', 'HelperController@getKecamatanKab');
+	Route::get('getAPIKecamatan', 'HelperController@getKecamatanKode');
 
-    //Data Realisasi v2
-    Route::get('getAPIRealisasiAll', 'RealisasiController@getRealisasiAll');
-    Route::get('getAPIRealisasiByYear/{periodetahun}', 'RealisasiController@getRealisasiByYear');
+	//Desa
+	Route::get('getAPIDesaAll', 'HelperController@getdesa');
+	Route::get('getAPIDesaKec', 'HelperController@getDesaKec');
+	Route::get('getAPIDesa', 'HelperController@getDesaKode');
 
-    Route::get('getAPIMonitoringDataByYear/{periodetahun}', 'RealisasiController@MonitoringDataByYear');
-    Route::get('getAPIMonitoringDataAll', 'RealisasiController@MonitoringDataAll');
+	//Data Realisasi v2
+	Route::get('getAPIRealisasiAll', 'RealisasiController@getRealisasiAll');
+	Route::get('getAPIRealisasiByYear/{periodetahun}', 'RealisasiController@getRealisasiByYear');
 
-    Route::get('getAPIAnggotaMitraAll', 'AnggotaMitraController@index');
-    Route::get('getAPIAnggotaMitraByYear/{periodetahun}', 'AnggotaMitraController@ByYears');
-    Route::get('getAPIAnggotaMitra/{id}', 'AnggotaMitraController@show');
+	Route::get('getAPIMonitoringDataByYear/{periodetahun}', 'RealisasiController@MonitoringDataByYear');
+	Route::get('getAPIMonitoringDataAll', 'RealisasiController@MonitoringDataAll');
 
-    //Data wilayah
-    Route::get('getAllProvinsi', 'GetWilayahController@getAllProvinsi');
-    Route::get('getKabupatenByProvinsi/{id}', 'GetWilayahController@getKabupatenByProvinsi');
-    Route::get('getKecamatanByKabupaten/{id}', 'GetWilayahController@getKecamatanByKabupaten');
-    Route::get('getDesaByKecamatan/{id}', 'GetWilayahController@getDesaByKecamatan');
+	Route::get('getAPIAnggotaMitraAll', 'AnggotaMitraController@index');
+	Route::get('getAPIAnggotaMitraByYear/{periodetahun}', 'AnggotaMitraController@ByYears');
+	Route::get('getAPIAnggotaMitra/{id}', 'AnggotaMitraController@show');
 
-    //data pksmitra
-    Route::get('getApiPksMitraAll', 'getPksMitra@getApiPksMitraAll');
+	//Data wilayah
+	Route::get('getAllProvinsi', 'GetWilayahController@getAllProvinsi');
+	Route::get('getKabupatenByProvinsi/{id}', 'GetWilayahController@getKabupatenByProvinsi');
+	Route::get('getKecamatanByKabupaten/{id}', 'GetWilayahController@getKecamatanByKabupaten');
+	Route::get('getDesaByKecamatan/{id}', 'GetWilayahController@getDesaByKecamatan');
 
-    //data Verifikasi v2
-    Route::get('getAPIVerifiedByYear/{periodetahun}', 'RealisasiController@getApiVerifiedbyYear');
-    Route::get('getAPIVerifiedAll', 'RealisasiController@getAPIVerifiedAll');
+	//data pksmitra
+	Route::get('getApiPksMitraAll', 'getPksMitra@getApiPksMitraAll');
+
+	//data Verifikasi v2
+	Route::get('getAPIVerifiedByYear/{periodetahun}', 'RealisasiController@getApiVerifiedbyYear');
+	Route::get('getAPIVerifiedAll', 'RealisasiController@getAPIVerifiedAll');
 });
